--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,3 +1,14 @@
+$bg-color: #a9bcd0;
+$main-color: #373f51;
+$accent-color: #fb9966;
+$radius: 20px;
+
+@mixin desktop {
+  @media (min-width: 48rem) {
+    @content;
+  }
+}
+
 @font-face {
   font-family: 'JosefinSans';
   src: url(/src/assets/fonts/JosefinSans-Regular.ttf) format('truetype');
@@ -18,12 +29,36 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: monospace, sans-serif;
+  color: $main-color;
+  line-height: 1.25;
+}
+
+h1 {
+  font-family: 'JosefinSans', monospace, sans-serif;
+}
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-body {
-  font-family: 'JosefinSans', monospace;
+button,
+input {
+  padding: 0.75rem;
+  color: $main-color;
+  border-radius: $radius / 2;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    transition: all 0.3s ease-in-out;
+    transform: translateY(-1px);
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+  }
 }
