--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -42,12 +42,12 @@ img {
 
 button,
 input {
-  padding: 0.75rem;
   color: $main-color;
   border-radius: $radius / 2;
 }
 
 button {
+  padding: 0.75rem 2rem;
   border: none;
   cursor: pointer;
 
@@ -59,9 +59,54 @@ button {
 }
 
 input {
+  padding: 0.75rem;
   border: 1px solid $main-color;
 
   &:focus {
     outline-color: $main-color;
+  }
+}
+
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100svw;
+  height: 100svh;
+  background-color: $bg-color;
+}
+
+main {
+  width: 80vw;
+
+  >img.hero {
+    display: none;
+  }
+
+  >* {
+    flex: 1 1 50%;
+  }
+}
+
+.interaction-section {
+
+  >h1 {
+    text-align: center;
+  }
+
+  >.action-area {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 3rem 2rem;
+
+    >.action__btn {
+      align-self: center;
+      background-color: $accent-color;
+    }
+  }
+
+  >.result-area {
+    visibility: hidden;
   }
 }
